--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
     "\n",
     "sample_size = 25\n",
     "sample = pop_ages.sample(25) # Take a random sample of size 25 from above population\n",
-    "sample_mean = None  # Calculate sample mean \n",
+    "sample_mean = sample.mean()  # Calculate sample mean \n",
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
     "\n",
