--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
     "print(f'{sample_mean} is the sample mean')\n",
-    "\n",
+    "sample_mean - \n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
    ]
