--- a/index.ipynb
+++ b/index.ipynb
@@ -254,9 +254,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    19.87598\n",
+      "dtype: float64 is the sample mean\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0   -1.132598\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(23)\n",
     "\n",
@@ -266,7 +286,7 @@
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
     "print(f'{sample_mean} is the sample mean')\n",
-    "sample_mean - pop\n",
+    "sample_mean - pop_ages.mean()\n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
    ]
