--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     "sample_mean = sample.mean()  # Calculate sample mean \n",
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
-    "print(f'{sample_mean} is the sample mean')\n",
+    "print(f'{sample_mean[0]} is the sample mean')\n",
     "sample_mean - pop_ages.mean()\n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
