--- a/index.ipynb
+++ b/index.ipynb
@@ -282,11 +282,11 @@
     "\n",
     "sample_size = 25\n",
     "sample = pop_ages.sample(25) # Take a random sample of size 25 from above population\n",
-    "sample_mean = sample.mean()  # Calculate sample mean \n",
+    "sample_mean = sample.mean()[0]  # Calculate sample mean \n",
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
-    "print(f'{sample_mean[0]} is the sample mean')\n",
-    "sample_mean - pop_ages.mean()\n",
+    "print(f'{sample_mean} is the sample mean')\n",
+    "sample_mean - pop_ages.mean()[0]\n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
    ]
