Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,25 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    19.87598\n",
-      "dtype: float64 is the sample mean\n"
+      "19.875979962258437 is the sample mean\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0   -1.132598\n",
-       "dtype: float64"
+       "-1.1325975454055133"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
