--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    ],
    "source": [
     "# Calculate the t-critical value for 95% confidence level for sample taken above. \n",
-    "t_critical = stats.t.ppf(.95, df=24)   # Get the t-critical value  by using 95% confidence level and degree of freedom\n",
+    "t_critical = stats.t.ppf(.95, df=len(sample)-1)   # Get the t-critical value  by using 95% confidence level and degree of freedom\n",
     "print(f\"t-critical value: {t_critical}\")                  # Check the t-critical value\n",
     "#print(t_critical)     \n",
     "\n",
