--- a/index.ipynb
+++ b/index.ipynb
@@ -348,10 +348,10 @@
     "sigma = sample.std()/len(sample)**.5\n",
     "\n",
     "# Calculate margin of error using t_critical and sigma\n",
-    "margin_of_error = t_critical\n",
+    "margin_of_error = t_critical*sigma\n",
     "\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
-    "confidence_interval = None\n",
+    "confidence_interval = samp\n",
     "\n",
     "\n",
     "print(\"Confidence interval:\")\n",
