--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,7 @@
     "margin_of_error = t_critical*sigma\n",
     "\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
-    "confidence_interval = samp\n",
+    "confidence_interval = sample.mean() - marg\n",
     "\n",
     "\n",
     "print(\"Confidence interval:\")\n",
