Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
     "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
     "\n",
     "\n",
-    "print(f\"Confidence interval: \")\n",
+    "print(f\"Confidence interval: {confidenc}\")\n",
     "#print(confidence_interval)\n",
     "\n",
     "# Confidence interval:\n",
