Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,9 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence interval: (0    18.566911\n",
+      "dtype: float64, 0    21.185049\n",
+      "dtype: float64)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the sample standard deviation\n",
     "sample_stdev = sample.std()    # Get the sample standard deviation\n",
@@ -354,7 +364,7 @@
     "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
     "\n",
     "\n",
-    "print(f\"Confidence interval: {confidenc}\")\n",
+    "print(f\"Confidence interval: {confidence_interval}\")\n",
     "#print(confidence_interval)\n",
     "\n",
     "# Confidence interval:\n",
