--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
    ],
    "source": [
     "# Calculate the sample standard deviation\n",
-    "sample_stdev = sample.std()    # Get the sample standard deviation\n",
+    "sample_stdev = sample.std()[0]    # Get the sample standard deviation\n",
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
     "sigma = sample.std()/len(sample)**.5\n",
