Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
     "sample_stdev = sample.std()[0]    # Get the sample standard deviation\n",
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
-    "sigma = sample.std()/len(sample)**.5\n",
+    "sigma = sample.std()[0]/len(sample)**.5\n",
     "\n",
     "# Calculate margin of error using t_critical and sigma\n",
     "margin_of_error = t_critical*sigma\n",
