Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,7 @@
    "source": [
     "# Calculate the sample standard deviation\n",
     "sample_stdev = sample.std()[0]    # Get the sample standard deviation\n",
-    "\n",
+    "print(sampl)\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
     "sigma = sample.std()[0]/len(sample)**.5\n",
     "\n",
