Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.171349676625928\n",
+      "0.6342699353251856\n",
       "Confidence interval: (0    18.566911\n",
       "dtype: float64, 0    21.185049\n",
       "dtype: float64)\n"
@@ -357,7 +357,7 @@
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
     "sigma = sample_stdev/len(sample)**.5\n",
-    "\n",
+    "print(sigma)\n",
     "# Calculate margin of error using t_critical and sigma\n",
     "margin_of_error = t_critical*sigma\n",
     "\n",
