--- a/index.ipynb
+++ b/index.ipynb
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6342699353251856\n",
+      "1.3090688072015482\n",
       "Confidence interval: (0    18.566911\n",
       "dtype: float64, 0    21.185049\n",
       "dtype: float64)\n"
@@ -357,10 +357,10 @@
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
     "sigma = sample_stdev/len(sample)**.5\n",
-    "print(sigma)\n",
+    "\n",
     "# Calculate margin of error using t_critical and sigma\n",
     "margin_of_error = t_critical*sigma\n",
-    "\n",
+    "print(margin_of_error)\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
     "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
     "\n",
