Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,17 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3090688072015482\n",
-      "Confidence interval: (0    18.566911\n",
-      "dtype: float64, 0    21.185049\n",
-      "dtype: float64)\n"
+      "Confidence interval: (18.56691115505689, 21.185048769459986)\n"
      ]
     }
    ],
@@ -362,7 +359,7 @@
     "margin_of_error = t_critical*sigma\n",
     "\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
-    "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
+    "confidence_interval = (sample.mean()[0] - margin_of_error, sample.mean()[0] + margin_of_error)\n",
     "\n",
     "\n",
     "print(f\"Confidence interval: {confidence_interval}\")\n",
