Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -378,10 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18.56691115505689, 21.185048769459986)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.t.interval(alpha = 0.95,              # Confidence level\n",
+    "                 df= 24,                    # Degrees of freedom\n",
+    "                 loc = sample_mean,         # Sample mean\n",
+    "                 scale = sigma)             # Standard deviation estimate"
+   ]
   },
   {
    "cell_type": "code",
