Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confidence interval: (18.56691115505689, 21.185048769459986)\n"
+      "Confidence interval: (18.539917205659435, 21.21204271885744)\n"
      ]
     }
    ],
@@ -353,7 +353,7 @@
     "sample_stdev = sample.std()[0]    # Get the sample standard deviation\n",
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
-    "sigma = sample_stdev/len(sample)**.5\n",
+    "sigma = sample_stdev/(len(sample)-1)**.5\n",
     "\n",
     "# Calculate margin of error using t_critical and sigma\n",
     "margin_of_error = t_critical*sigma\n",
