--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,7 @@
     "sample_stdev = sample.std()[0]    # Get the sample standard deviation\n",
     "\n",
     "# Calculate sigma using the formula described above to get population standard deviation estimate\n",
-    "sigma = sample_stdev/(len(sample)-1)**.5\n",
+    "sigma = sample_stdev/(len(sample))**.5\n",
     "\n",
     "# Calculate margin of error using t_critical and sigma\n",
     "margin_of_error = t_critical*sigma\n",
