--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,7 @@
     "    sigma = t*sample.std() # Sample standard deviation\n",
     "\n",
     "    # Calculate the margin of error using formula given above\n",
-    "    moe = None\n",
+    "    moe = t*sig\n",
     "\n",
     "    # Calculate the confidence interval by applying margin of error to sample mean \n",
     "    # (mean - margin of error, mean+ margin of error)\n",
