--- a/index.ipynb
+++ b/index.ipynb
@@ -454,10 +454,10 @@
     "\n",
     "    t = stats.t.ppf(.975, df=n-1)  #  t-critical value for 95% confidence\n",
     "    \n",
-    "    sigma = t*sample.std() # Sample standard deviation\n",
+    "    sigma = sample.std()/ # Sample standard deviation\n",
     "\n",
     "    # Calculate the margin of error using formula given above\n",
-    "    moe = t*sig\n",
+    "    moe = t*sigma\n",
     "\n",
     "    # Calculate the confidence interval by applying margin of error to sample mean \n",
     "    # (mean - margin of error, mean+ margin of error)\n",
