--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
     "\n",
     "    t = stats.t.ppf(.975, df=n-1)  #  t-critical value for 95% confidence\n",
     "    \n",
-    "    sigma = sample.std()/ # Sample standard deviation\n",
+    "    sigma = sample.std()/len(sample)**.5 # Sample standard deviation\n",
     "\n",
     "    # Calculate the margin of error using formula given above\n",
     "    moe = t*sigma\n",
