Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "    # Calculate the confidence interval by applying margin of error to sample mean \n",
     "    # (mean - margin of error, mean+ margin of error)\n",
-    "    conf = None\n",
+    "    conf = (x_hat - moe, x)\n",
     "    \n",
     "    return conf"
    ]
