Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
     "\n",
     "    # Calculate the confidence interval by applying margin of error to sample mean \n",
     "    # (mean - margin of error, mean+ margin of error)\n",
-    "    conf = (x_hat - moe, x)\n",
+    "    conf = (x_hat - moe, x_hat + moe)\n",
     "    \n",
     "    return conf"
    ]
