Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -494,7 +494,7 @@
     "for sample in range(25):\n",
     "\n",
     "    # Take a random sample of chosen size \n",
-    "    \n",
+    "    pop_ages.sample(25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "   \n",
