--- a/index.ipynb
+++ b/index.ipynb
@@ -491,13 +491,13 @@
     "\n",
     "# Run a for loop for sampling 25 times and calculate + store confidence interval and sample mean values in lists initialised above\n",
     "\n",
-    "for sample in range(25):\n",
+    "for _ in range(25):\n",
     "\n",
     "    # Take a random sample of chosen size \n",
-    "    samppop_ages.sample(25)\n",
+    "    sample = pop_ages.sample(25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
-    "   \n",
+    "    sample.mean()\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "\n"
