Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,8 @@
     "    sample = pop_ages.sample(25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
-    "    sample.mean()\n",
+    "    x_bar = sample.mean()[0]\n",
+    "    conf\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "\n"
