Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,7 +498,7 @@
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    x_bar = sample.mean()[0]\n",
-    "    conf\n",
+    "    conf_interval(sample)\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "\n"
