Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,9 +498,10 @@
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    x_bar = sample.mean()[0]\n",
-    "    conf_interval(sample)\n",
+    "    interval = conf_interval(sample)\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
+    "    intervals.append(interval)\n",
     "\n"
    ]
   },
