Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,6 +502,7 @@
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "    intervals.append(interval)\n",
+    "    sample_means.append(x_bar)\n",
     "\n"
    ]
   },
