Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -552,7 +552,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "for x_bar in "
+   ]
   },
   {
    "cell_type": "markdown",
