--- a/index.ipynb
+++ b/index.ipynb
@@ -553,7 +553,8 @@
     }
    ],
    "source": [
-    "for x_bar, conf_int in zip(sample_means, intervals)"
+    "for x_bar, conf_int in zip(sample_means, intervals):\n",
+    "    np.linspace(conf_int[0], conf_)"
    ]
   },
   {
