--- a/index.ipynb
+++ b/index.ipynb
@@ -554,7 +554,7 @@
    ],
    "source": [
     "for x_bar, conf_int in zip(sample_means, intervals):\n",
-    "    np.linspace(conf_int[0], conf_)"
+    "    np.linspace(conf_int[0], conf_int[1], 50)"
    ]
   },
   {
