--- a/index.ipynb
+++ b/index.ipynb
@@ -553,7 +553,7 @@
     }
    ],
    "source": [
-    "plt.hlines(y=)\n",
+    "plt.hlines(y=pop_ages.mean()[0])\n",
     "\n",
     "for x_bar, conf_int in zip(sample_means, intervals):\n",
     "    bar = np.linspace(conf_int[0], conf_int[1], 50)\n",
