Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
     "\n",
     "for x_bar, conf_int in zip(sample_means, intervals):\n",
     "    bar = np.linspace(conf_int[0], conf_int[1], 50)\n",
-    "    dot = "
+    "    plt."
    ]
   },
   {
