--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,8 @@
     "\n",
     "for i, x_bar, conf_int in zip(range(25), sample_means, intervals):\n",
     "    bar = np.linspace(conf_int[0], conf_int[1], 50)\n",
-    "    plt.scatter(i, )"
+    "    plt.scatter(i, bar)\n",
+    "    plt.scatter(i, x_bar, )"
    ]
   },
   {
