--- a/index.ipynb
+++ b/index.ipynb
@@ -563,7 +563,7 @@
     "\n",
     "for i, x_bar, conf_int in zip(range(25), sample_means, intervals):\n",
     "    bar = np.linspace(conf_int[0], conf_int[1], 50)\n",
-    "    plt.scatter(i, bar)\n",
+    "    plt.vlines()\n",
     "    plt.scatter(i, x_bar, s=4)\n",
     "    "
    ]
